# smm_screws

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
action/: idosc.action
cfg/: JointVelocitiesConfig.cfg
config/: force_meas_plot_config.yaml  hybrid3.yaml  idosc.yaml  impedance.yaml
demos/ros2/: fk_demo_node.cpp
doc/: .~lock.HybridController3_map.odg#  .~lock.ScrewsKinematics_map.odg#  .~lock.pkg_map.odg#  HybridController3_map.odg  ScrewsKinematics_map.odg  pkg_map.odg
doc/drawings/: HybridController3_map.odg  ScrewsKinematics_map.odg  pkg_map.odg
examples/cpp_core/: screws_main_example.cpp
include/smm_screws/: OperationalSpaceControllers.h  RobotAbstractBase.h  RobotAbstractBaseDeprecated  RobotYamlLoader.h  ScrewsDynamics.h  ScrewsKinematics.h  ScrewsMain.h  ScrewsVisualization.h  passive_definition.h  robot_definition.h  robot_parameters.h  robot_shared.h
include/smm_screws/core/: RobotAbstractBase.h  RobotAbstractBaseNdof.h  RobotContext.h  RobotContextNdof.h  RobotYamlLoader.h  RobotYamlLoaderNdof.h  ScrewsDynamics.h  ScrewsDynamicsNdof.h  ScrewsKinematics.h  ScrewsKinematicsNdof.h  ScrewsMain.h  debug_macros.h
launch/: anthropomorphic_hybrid3_centralized.launch  anthropomorphic_idosc_centralized.launch  anthropomorphic_impedance_centralized.launch
msg/: CurrentCartesianState.msg  ForceMeasurements.msg  JointAccel.msg  ToolCartesianState.msg
script/: joint_velocities_publisher.py
src/: OperationalSpaceControllers.cpp  RobotYamlLoader.cpp  ScrewsDynamics.cpp  ScrewsKinematics.cpp  ScrewsMain.cpp  ScrewsVisualization.cpp  clientCurrentCartesianState.cpp  clientOperationalSpaceJacobian.cpp  example.cpp  example_dynamics.cpp  example_idosc_centralized.cpp  example_shared.cpp  hybrid3_centralized.cpp  idosc_action_client.cpp  idosc_action_server.cpp  idosc_centralized.cpp  impedance_centralized.cpp  joint2task_space.cpp  joint_accelerations.cpp  publishCurrentCartesianState.cpp  robot_base_node.cpp  robot_shared.cpp  serverCurrentCartesianState.cpp  serverOperationalSpaceJacobian.cpp  smm_idosc_centralized.cpp
src/core/: RobotContext.cpp  RobotContextNdof.cpp  RobotYamlLoader.cpp  RobotYamlLoaderNdof.cpp  ScrewsDynamics.cpp  ScrewsDynamicsNdof.cpp  ScrewsKinematics.cpp  ScrewsKinematicsNdof.cpp  ScrewsMain.cpp  test_screws_core  test_screws_core.cpp
srv/: SetCurrentCartesianState.srv  SetOperationalSpaceJacobian.srv
